--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/smoothscroll-polyfill": "^0.3.1",
     "@types/styled-components": "^5.1.26",
     "bootstrap": "^5.2.0",
+    "email-js": "^2.0.2",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-animation": "^1.2.2",
